# fastapi-nix-experiment

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  result  shell.nix
app/: app.py
tests/: conftest.py  test_main.py
