[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
description = "A new Python project."
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["fastapi>=0.103.1", "uvicorn>=0.23.2"]

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0",
    "black>=23.9.1",
    "coverage>=7.3.1",
    "greenlet>=2.0.2",
    "invoke>=2.2.0",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.1",
    "pytest>=7.4.2",
    "ruff>=0.0.290",
    "snok",
    "watchfiles>=0.20.0",
]

[tool.snok]
name = "app"
sources = ["app", "tests"]

[tool.ruff]
line-length = 88
ignore = [
    "D10",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D415",
]
include = ["*.py"]
select = ["E", "F", "I"]
target-version = "py310"

[tool.black]
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.*_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["dist", "build", ".venv"]
[[tool.mypy.overrides]]
module = "app._modal"
ignore_errors = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.pytest.ini_options]
addopts = [
    "-n",
    "auto",
    "-o",
    "console_output_style=progress",
    "--disable-warnings",
    "--showlocals",
    "--cov=app",
    "--cov=tests",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]

[tool.coverage.run]
parallel = true
source = ["app", "tests"]
omit = ["*__init__.py", "_modal.py"]
concurrency = ["thread", "greenlet", "multiprocessing"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.setuptools.dynamic.version]
attr = "app.__version__"

[tool.setuptools.packages.find]
exclude = ["tests"]
